Update calibration message to connection status

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             <div class="flex justify-between items-center">
                                 <div>
                                     <h4 class="font-semibold text-sm text-slate-200">Cihaz Başlatıldı</h4>
-                                    <p class="text-[10px] text-slate-500">Kalibrasyon: Başarılı</p>
+                                    <p class="text-[10px] text-slate-500">Bağlantı: Başarılı</p>
                                 </div>
                                 <span class="text-xs font-mono text-slate-500">08:00</span>
                             </div>
