--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Brain Health Monitor (Pro)</title>
+    <title>Brain Health Monitor</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -131,7 +131,7 @@
                                 <span class="text-blue-400 text-sm">⏱️</span>
                             </div>
                             <p class="text-xs text-slate-400 font-medium">Bağlantı Süresi</p>
-                            <p class="text-lg font-bold text-slate-200">4s 12dk</p>
+                            <p class="text-lg font-bold text-slate-200">1s 14dk</p>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,6 @@
                     <button class="w-full bg-gradient-to-r from-rose-700 to-rose-600 active:from-rose-800 active:to-rose-700 text-white font-bold py-4 rounded-xl shadow-[0_10px_20px_-5px_rgba(225,29,72,0.3)] transform transition active:scale-[0.98] group relative overflow-hidden">
                         <div class="absolute inset-0 bg-white/10 group-hover:translate-x-full transition duration-500 ease-out -skew-x-12 -translate-x-full"></div>
                         <span class="flex items-center justify-center space-x-2">
-                            <span class="text-xl">⚠️</span>
                             <span>Aura / Rahatsızlık Bildir</span>
                         </span>
                     </button>
@@ -184,7 +183,6 @@
                     <button class="w-full bg-gradient-to-r from-rose-700 to-rose-600 active:from-rose-800 active:to-rose-700 text-white font-bold py-4 rounded-xl shadow-[0_10px_20px_-5px_rgba(225,29,72,0.3)] transform transition active:scale-[0.98] group relative overflow-hidden">
                         <div class="absolute inset-0 bg-white/10 group-hover:translate-x-full transition duration-500 ease-out -skew-x-12 -translate-x-full"></div>
                         <span class="flex items-center justify-center space-x-2">
-                            <span class="text-xl">⚠️</span>
                             <span>Aura / Rahatsızlık Bildir</span>
                         </span>
                     </button>
@@ -211,7 +209,7 @@
                                 </div>
                                 <p class="text-xs text-slate-400 mb-3">Bugün</p>
                                 <div class="flex gap-2">
-                                    <span class="px-2 py-1 bg-slate-800 text-slate-400 text-[10px] font-bold rounded border border-slate-700">Nöbet süresi: 45 sn</span>
+                                    <span class="px-2 py-1 bg-slate-800 text-slate-400 text-[10px] font-bold rounded border border-slate-700">Nöbet süresi: 47 sn</span>
                                 </div>
                             </div>
                         </div>
@@ -248,7 +246,6 @@
                     <button class="w-full bg-gradient-to-r from-rose-700 to-rose-600 active:from-rose-800 active:to-rose-700 text-white font-bold py-4 rounded-xl shadow-[0_10px_20px_-5px_rgba(225,29,72,0.3)] transform transition active:scale-[0.98] group relative overflow-hidden">
                         <div class="absolute inset-0 bg-white/10 group-hover:translate-x-full transition duration-500 ease-out -skew-x-12 -translate-x-full"></div>
                         <span class="flex items-center justify-center space-x-2">
-                            <span class="text-xl">⚠️</span>
                             <span>Aura / Rahatsızlık Bildir</span>
                         </span>
                     </button>
