Change label from 'M1 - Mastoid' to 'TP10 - Mastoid'

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         </div>
                         <div class="text-right">
                             <div class="text-xs text-slate-500 font-mono mb-1">KANAL</div>
-                            <span class="px-2 py-1 bg-slate-800 rounded text-xs text-slate-300 border border-slate-700">M1 - Mastoid</span>
+                            <span class="px-2 py-1 bg-slate-800 rounded text-xs text-slate-300 border border-slate-700">TP10 - Mastoid</span>
                         </div>
                     </div>
 
